--- a/neuralnetworkfromscratch.ipynb
+++ b/neuralnetworkfromscratch.ipynb
@@ -41,8 +41,8 @@
     "    #Train the neural network\n",
     "    def train(self, input_list, target_list):\n",
     "        #Convert inputs into 2d array\n",
-    "        inputs = np.array(input_list, ndim = 2).T\n",
-    "        targets = np.array(target_list, ndim = 2).T\n",
+    "        inputs = np.array(input_list, ndmin = 2).T\n",
+    "        targets = np.array(target_list, ndmin = 2).T\n",
     "        \n",
     "        #Calculating the inputs to the hidden layer\n",
     "        hidden_inputs = np.dot(self.wih, inputs)\n",
@@ -68,7 +68,7 @@
     "\n",
     "    #Query the neural network\n",
     "    def query():\n",
-    "        inputs = np.array(input_list, ndim = 2).T\n",
+    "        inputs = np.array(input_list, ndmin = 2).T\n",
     "        \n",
     "        #Calculating the inputs to the hidden layer\n",
     "        hidden_inputs = np.dot(self.wih, inputs)\n",
