--- a/neuralnetworkfromscratch.ipynb
+++ b/neuralnetworkfromscratch.ipynb
@@ -67,7 +67,7 @@
     "        self.wih += self.lr * np.dot((hidden_errors * hidden_outputs * (1.0 - hidden_outputs)), np.transpose(inputs))\n",
     "\n",
     "    #Query the neural network\n",
-    "    def query():\n",
+    "    def query(self, input_list):\n",
     "        inputs = np.array(input_list, ndmin = 2).T\n",
     "        \n",
     "        #Calculating the inputs to the hidden layer\n",
